--- a/LESS/footer.less
+++ b/LESS/footer.less
@@ -49,10 +49,10 @@ p {
 }
 
 .footer-links a{
-    color: @dk-blue;
+    color: @white;
     text-decoration: none;
     margin: 10%;
-    background: @white;
+    
 
     &:hover{
         text-decoration: underline;
