--- a/LESS/main.less
+++ b/LESS/main.less
@@ -78,24 +78,17 @@
             margin: 2% 0;
             background-color: @white; 
             border: 2px solid @white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;            
         }
-        .puzzle-img{
-            margin-left: 15%;
-        }
+       
         .bungalow{
             display: flex;
             flex-direction: row;
             align-items: center;
         }
-        .items-img{
-            margin-left: 18.5%;
-        }
-        .tiles-img{
-            margin-left: 15.5%;
-        }
-        .create-img{
-            margin-left: 10.5%;
-        }
+        
         img {
             width: 300;
             height: 200px;
@@ -116,7 +109,13 @@
             font-weight: bold;
             color: @dk-blue;
         }
+        img .puzzle-img {
+            align-self: center;
+            margin: 0 auto;
+            
+        }        
     }
+    
     
 }
 
